[package]
name = "technews"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
lettre = "0.11.7"
maud = "0.26.0"
reqwest = "0.12.5"
scraper = "0.19.1"
tokio = { version = "1.39.1", features = ["full"] }
